# Project-Readiness-Checker

./: .gitignore  CODE_OF_CONDUCT.md  LICENSE  README.md  create_shortcut.ps1  main.py  pyproject.toml  requirements.txt  run_app.bat
.github/workflows/: lint.yml  tests.yml
docs/: ARCHITECTURE.md  CONTRIBUTING.md  EXAMPLES.md  TROUBLESHOOTING.md
examples/: embedded_project.json  hardware_project.json  software_project.json
src/: cli.py  models.py
src/checkers/: engine.py
src/formatters/: base.py  cli.py  html_formatter.py  json_formatter.py
src/gui/: audit_logic.py  main_app.py  settings_manager.py
tests/: test_engine.py
