[project]
name = "Project-Readiness-Checker"
version = "0.1.0"
description = "Herramienta de validación estructural para asegurar la consistencia y calidad de los entregables en proyectos multidisciplinarios."
authors = [
    { name = "Robert Salinas" }
]
license = { text = "MIT" }
dependencies = [
    "typer[all]>=0.9.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
    "jinja2>=3.1.0"
]
requires-python = ">=3.11"

[project.scripts]
prc = "src.cli:app"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
